Initialized new angular project.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,37 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/node
-# Edit at https://www.toptal.com/developers/gitignore?templates=node
+# Created by https://www.toptal.com/developers/gitignore/api/angular,node
+# Edit at https://www.toptal.com/developers/gitignore?templates=angular,node
+
+### Angular ###
+## Angular ##
+# compiled output
+dist/
+tmp/
+app/**/*.js
+app/**/*.js.map
+
+# dependencies
+node_modules/
+bower_components/
+
+# IDEs and editors
+.idea/
+
+# misc
+.sass-cache/
+connect.lock/
+coverage/
+libpeerconnection.log/
+npm-debug.log
+testem.log
+typings/
+
+# e2e
+e2e/*.js
+e2e/*.map
+
+# System Files
+.DS_Store/
 
 ### Node ###
 # Logs
@@ -43,11 +74,9 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
-typings/
 
 # TypeScript cache
 *.tsbuildinfo
@@ -98,7 +127,6 @@ dist
 storybook-static
 
 # rollup.js default build output
-dist/
 
 # Gatsby files
 .cache/
@@ -125,7 +153,6 @@ dist/
 .vscode-test
 
 # Temporary folders
-tmp/
 temp/
 
-# End of https://www.toptal.com/developers/gitignore/api/node
+# End of https://www.toptal.com/developers/gitignore/api/angular,node
