--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "class-transformer": "^0.4.0",
     "concurrently": "^6.0.0",
+    "heap": "^0.2.6",
     "node-dijkstra": "^2.5.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
+    "ts-priority-queue": "^0.1.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
