--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.7",
     "class-transformer": "^0.4.0",
     "concurrently": "^6.0.0",
+    "d3": "^6.7.0",
     "heap": "^0.2.6",
     "node-dijkstra": "^2.5.0",
     "reflect-metadata": "^0.1.13",
@@ -33,6 +34,7 @@
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
+    "@types/d3": "^6.3.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.7",
     "codelyzer": "^6.0.0",
