--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^6.0.0",
     "d3": "^6.7.0",
     "heap": "^0.2.6",
+    "ngx-color-picker": "^11.0.0",
     "node-dijkstra": "^2.5.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
