--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rxjs": "~6.6.0",
     "ts-priority-queue": "^0.1.1",
     "tslib": "^2.0.0",
+    "xlsx": "^0.17.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
