--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-transformer": "^0.4.0",
     "concurrently": "^6.0.0",
     "d3": "^6.7.0",
+    "d3-zoom": "^2.0.0",
     "heap": "^0.2.6",
     "ngx-color-picker": "^11.0.0",
     "node-dijkstra": "^2.5.0",
